@@ -1,3 +1,7 @@
+Thu Aug 17 16:46:00 BST 2000 Olly Betts
+
+	* A few tweaks to NetworkMatch
+
 Thu Aug 17 16:14:00 BST 2000 Olly Betts
 
 	* Weighting scheme now specified in OmSettings; termweights now
